Cargo.toml[workspace]
members = ["forge-router", "forge-agent-runtime", "forge-cli", "forge-memory"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Scott <goldrusher9009@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/goldrusher9009-sketch/forge-core"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
async-trait = "0.1"
futures = "0.3"
